--- a/checkboxdemo/build.gradle
+++ b/checkboxdemo/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
 
     defaultConfig {
-        applicationId "com.example.ontoucheventdemothree"
+        applicationId "com.example.checkboxdemo"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
@@ -23,5 +23,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
